# spotdesk

./: .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE.md  HANDOFF_TO_CLAUDE_CODE.md  README.md  index.html  package-lock.json  package.json  spot-tracker.html  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CapacityModal.tsx  ClusterGrid.tsx  ConfirmProvider.tsx  DayDetailModal.tsx  DayRow.tsx  EquityCurve.tsx  FooterActions.tsx  Header.tsx  LogModal.tsx  MultiBar.tsx  MultiLogModal.tsx  Packages.tsx  PhaseFilters.tsx  PnlHistory.tsx  PositionsTable.tsx  SectionHeader.tsx  TodayLog.tsx  TopStats.tsx
src/components/dashboard/: CapacityGauge.tsx  ClientDetailPanel.tsx  ClusterGrid.tsx  ClustersSection.tsx  DeployedCapitalChart.tsx  HeroMetric.tsx  IntradayPnlChart.tsx  (+11 more)
src/config/: departments.ts
src/hooks/: useModals.ts  useMultiSelect.ts  useNowTrading.ts
src/layouts/: AppShell.tsx
src/lib/: backup.ts  ladder.ts  logic.ts  persistence.ts  stats.ts  types.ts  utils.ts
src/store/: StoreProvider.tsx
src/views/: AccountingLedgerView.tsx  CeoClientsView.tsx  CeoOverviewView.tsx  ClustersView.tsx  DataSafetyView.tsx  HistoryView.tsx  HomeView.tsx  LogView.tsx  ManagersView.tsx  MoneyHeldView.tsx  NewTaskView.tsx  NowTradingView.tsx  ObjectivesView.tsx  OverviewView.tsx  PlaceholderView.tsx  ProjectsView.tsx  TaskListView.tsx
tests/: fixture_day4.json  logic.test.ts
(+28 files in other folders)
